--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -13,12 +13,14 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.19",
-    "expo": "^49.0.13",
+    "axios": "^1.5.1",
+    "expo": "^49.0.16",
     "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-native": "^0.72.5",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-swiper": "^1.6.0",
     "react-navigation": "^5.0.0"
   },
   "devDependencies": {
