--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "expo": "^49.0.13",
+    "react-native-gesture-handler": "^2.13.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0"
   }
