--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/prompt": "^0.2.3",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-segmented-control/segmented-control": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.5.9",
