--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-segmented-control/segmented-control": "^2.4.2",
+    "@react-native-segmented-control/segmented-control": "2.4.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
