--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "axios": "^1.6.0",
     "expo": "^49.0.13",
     "react-native-gesture-handler": "^2.13.3",
     "react-native-safe-area-context": "4.6.3",
