--- a/literary-hub/mongo-api/package.json
+++ b/literary-hub/mongo-api/package.json
@@ -10,13 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.5.1",
+    "axios": "^1.6.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "expo": "^49.0.16",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "metro": "^0.80.0",
     "mongoose": "^7.6.3",
-    "nodemailer": "^6.9.6",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1"
   }
 }
