--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -22,11 +22,13 @@
     "expo": "^49.0.16",
     "expo-status-bar": "~1.6.0",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "^0.72.5",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
     "styled-components": "^6.1.0"
   },
