--- a/literary-hub/mongo-api/package.json
+++ b/literary-hub/mongo-api/package.json
@@ -16,6 +16,7 @@
     "expo": "^49.0.16",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "metro": "^0.80.0",
     "mongoose": "^7.6.3",
     "nodemailer": "^6.9.7",
