--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/stack": "^6.3.19",
     "axios": "^1.5.1",
     "expo": "^49.0.16",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
