--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.5.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "axios": "^1.6.0",
     "expo": "^49.0.13",
-    "jwt-decode": "^4.0.0",
     "expo-router": "^2.0.10",
+    "jwt-decode": "^4.0.0",
+    "react-native-dialog-input": "^1.0.8",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
