--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.1.6",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/prompt": "^0.2.3",
+    "@expo/webpack-config": "^19.0.0",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/masked-view": "^0.1.11",
@@ -32,7 +33,7 @@
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-dialog-input": "^1.0.8",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
