--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.5.1",
     "expo": "^49.0.16",
     "expo-font": "~11.4.0",
+    "expo-image-picker": "^14.5.0",
     "expo-status-bar": "~1.6.0",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
