--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -43,6 +43,7 @@
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
     "react-redux": "^8.1.3",
+    "react-search-box": "^3.0.0",
     "redux": "^4.2.1",
     "styled-components": "^6.1.0"
   },
