--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -40,6 +40,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-svg": "^14.1.0",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
     "react-redux": "^8.1.3",
