--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -21,6 +21,8 @@
     "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^18.7.3",
+    "@react-native-firebase/storage": "^18.7.3",
     "@react-native-segmented-control/segmented-control": "2.4.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
@@ -28,9 +30,12 @@
     "@react-navigation/stack": "^6.3.19",
     "axios": "^1.5.1",
     "expo": "^49.0.16",
+    "expo-clipboard": "^4.5.0",
+    "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
-    "expo-image-picker": "^14.5.0",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.7.2",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
