--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -33,7 +33,7 @@
     "expo-clipboard": "^4.5.0",
     "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
-    "expo-image-picker": "~14.3.2",
+    "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.2",
     "jwt-decode": "^4.0.0",
