--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -30,10 +30,10 @@
     "@react-navigation/stack": "^6.3.19",
     "axios": "^1.5.1",
     "expo": "^49.0.16",
-    "expo-clipboard": "^4.5.0",
+    "expo-clipboard": "~4.3.1",
     "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
-    "expo-image-picker": "^14.7.1",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.2",
     "jwt-decode": "^4.0.0",
@@ -46,7 +46,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
     "react-redux": "^8.1.3",
