--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -36,9 +36,11 @@
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.2",
+    "ionicons": "^7.2.2",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-is": "^18.2.0",
     "react-native": "0.72.6",
     "react-native-dialog-input": "^1.0.8",
     "react-native-gesture-handler": "~2.12.0",
@@ -52,6 +54,7 @@
     "react-redux": "^8.1.3",
     "react-search-box": "^3.0.0",
     "redux": "^4.2.1",
+    "release-it": "^17.0.3",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
