--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -36,6 +36,7 @@
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.2",
+    "i": "^0.3.7",
     "ionicons": "^7.2.2",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
@@ -45,6 +46,8 @@
     "react-native-dialog-input": "^1.0.8",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-get-random-values": "~1.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-keyboard-sticky-view": "^1.0.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
@@ -55,6 +58,7 @@
     "react-search-box": "^3.0.0",
     "redux": "^4.2.1",
     "release-it": "^17.0.3",
+    "rn-keyboard-sticky-view": "^1.0.4",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
