--- a/literary-hub/app.json
+++ b/literary-hub/app.json
@@ -29,10 +29,18 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "e906e23d-18ff-48fd-b063-cb6c0b5463b"
+      }
     }
   }
 }
