--- a/literary-hub/app.json
+++ b/literary-hub/app.json
@@ -39,7 +39,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "e906e23d-18ff-48fd-b063-cb6c0b5463b"
+        "projectId": "e906e23d-18ff-48fd-b063-cb6c0b5463be"
       }
     }
   }
