--- a/literary-hub/app.json
+++ b/literary-hub/app.json
@@ -41,6 +41,7 @@
       "eas": {
         "projectId": "e906e23d-18ff-48fd-b063-cb6c0b5463be"
       }
-    }
+    },
+    "owner": "literaryhub"
   }
 }
