--- a/literary-hub/app.json
+++ b/literary-hub/app.json
@@ -23,7 +23,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.literaryhub.literaryhub"
     },
     "android": {
       "adaptiveIcon": {
