--- a/literary-hub/app.json
+++ b/literary-hub/app.json
@@ -5,6 +5,7 @@
     "plugins": [
       [
         "expo-image-picker",
+        "@react-native-firebase/app",
         {
           "photosPermission": "The app accesses your photos to let you share them with your friends."
         }
