--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -21,7 +21,7 @@
     "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-firebase/app": "^18.7.3",
+    "@react-native-firebase/app": "18.7.3",
     "@react-native-firebase/storage": "^18.7.3",
     "@react-native-segmented-control/segmented-control": "2.4.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
