--- a/literary-hub/app.json
+++ b/literary-hub/app.json
@@ -8,6 +8,14 @@
         {
           "photosPermission": "The app accesses your photos to let you share them with your friends."
         }
+      ],
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "useFrameworks": "static"
+          }
+        }
       ]
     ],
     "version": "1.0.0",
