--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -38,6 +38,7 @@
     "firebase": "^10.7.2",
     "ionicons": "^7.2.2",
     "jwt-decode": "^4.0.0",
+    "openai": "^4.27.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
