--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.1.6",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/prompt": "^0.2.3",
+    "@expo/config-plugins": "~7.2.2",
     "@expo/webpack-config": "^19.0.0",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-async-storage/async-storage": "1.18.2",
@@ -30,11 +31,13 @@
     "@react-navigation/stack": "^6.3.19",
     "axios": "^1.5.1",
     "expo": "^49.0.16",
-    "expo-build-properties": "^0.11.1",
+    "expo-build-properties": "~0.8.3",
     "expo-clipboard": "~4.3.1",
+    "expo-constants": "~14.4.2",
     "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
+    "expo-router": "2",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.8.0",
     "ionicons": "^7.2.2",
