works on postman

--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -29,6 +29,7 @@
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.19",
     "axios": "^1.5.1",
+    "dotenv": "^16.4.1",
     "expo": "^49.0.16",
     "expo-clipboard": "~4.3.1",
     "expo-file-system": "~15.4.5",
