--- a/literary-hub/eas.json
+++ b/literary-hub/eas.json
@@ -13,6 +13,12 @@
     "production": {}
   },
   "submit": {
-    "production": {}
+    "production": {
+      "ios": {
+        "appleId": "ishikaj00@gmail.com",
+        "ascAppId": "6477721835",
+        "appleTeamId": "J5B6QV36Z6"
+      }
+    }
   }
 }
