--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -47,6 +47,7 @@
     "react-native-dialog-input": "^1.0.8",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-get-random-values": "~1.9.0",
+    "react-native-openai": "^0.6.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
