working images but failing to bundle

--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -29,7 +29,7 @@
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.19",
     "axios": "^1.5.1",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.4.3",
     "expo": "^49.0.16",
     "expo-clipboard": "~4.3.1",
     "expo-file-system": "~15.4.5",
@@ -40,6 +40,8 @@
     "ionicons": "^7.2.2",
     "jwt-decode": "^4.0.0",
     "openai": "^4.27.0",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
