--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -46,7 +46,9 @@
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
     "react-native": "0.72.6",
+    "react-native-config": "^1.5.1",
     "react-native-dialog-input": "^1.0.8",
+    "react-native-dotenv": "^3.4.10",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-get-random-values": "~1.9.0",
     "react-native-openai": "^0.6.1",
