--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -31,7 +31,7 @@
     "@react-navigation/stack": "^6.3.19",
     "axios": "^1.5.1",
     "expo": "^49.0.16",
-    "expo-build-properties": "~0.8.3",
+    "expo-build-properties": "^0.11.1",
     "expo-clipboard": "~4.3.1",
     "expo-constants": "14.4.2",
     "expo-file-system": "~15.4.5",
