--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -32,7 +32,7 @@
     "axios": "^1.5.1",
     "dotenv": "^16.4.3",
     "expo": "^49.0.16",
-    "expo-build-properties": "~0.8.3",
+    "expo-build-properties": "^0.11.1",
     "expo-clipboard": "~4.3.1",
     "expo-constants": "14.4.2",
     "expo-file-system": "~15.4.5",
