--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -20,7 +20,7 @@
     "@expo/config-plugins": "7.2.2",
     "@expo/webpack-config": "^19.0.0",
     "@gorhom/bottom-sheet": "^4.5.1",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "^1.22.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "18.7.3",
     "@react-native-firebase/storage": "^18.7.3",
@@ -69,6 +69,7 @@
     "react-redux": "^8.1.3",
     "react-search-box": "^3.0.0",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "release-it": "^17.0.3",
     "rn-keyboard-sticky-view": "^1.0.4",
     "styled-components": "^6.1.0"
