--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -33,7 +33,7 @@
     "axios": "^1.5.1",
     "dotenv": "^16.4.3",
     "expo": "^49.0.16",
-    "expo-build-properties": "^0.11.1",
+    "expo-build-properties": "~0.8.3",
     "expo-clipboard": "~4.3.1",
     "expo-constants": "14.4.2",
     "expo-file-system": "~15.4.5",
@@ -52,7 +52,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.72.10",
     "react-native-config": "^1.5.1",
     "react-native-dialog-input": "^1.0.8",
     "react-native-dotenv": "^3.4.10",
