--- a/literary-hub/app.json
+++ b/literary-hub/app.json
@@ -7,7 +7,8 @@
         "expo-build-properties",
         {
           "ios": {
-            "useFrameworks": "static"
+            "useFrameworks": "static",
+            "deploymentTarget": "13.0"
           }
         }
       ],
