--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -56,6 +56,7 @@
     "react-native-config": "^1.5.1",
     "react-native-dialog-input": "^1.0.8",
     "react-native-dotenv": "^3.4.10",
+    "react-native-dots-pagination": "^0.3.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-get-random-values": "~1.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
