--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -46,6 +46,7 @@
     "i": "^0.3.7",
     "ionicons": "^7.2.2",
     "jwt-decode": "^4.0.0",
+    "open-dyslexic": "^1.0.3",
     "openai": "^4.27.0",
     "os": "^0.1.2",
     "path": "^0.12.7",
