--- a/literary-hub/eas.json
+++ b/literary-hub/eas.json
@@ -12,6 +12,9 @@
     },
     "production": {}
   },
+  "env": {
+    "OPENAI_KEY": "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"
+  },
   "submit": {
     "production": {
       "ios": {
