--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -39,6 +39,7 @@
     "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
+    "expo-linear-gradient": "^12.7.2",
     "expo-router": "2.0.15",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -62,6 +63,7 @@
     "react-native-get-random-values": "~1.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-sticky-view": "^1.0.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-openai": "^0.6.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
