--- a/literary-hub/app.json
+++ b/literary-hub/app.json
@@ -22,7 +22,7 @@
     ],
     "version": "3.0.0",
     "orientation": "portrait",
-    "icon": "./assets/logo-purple.png",
+    "icon": "./assets/icon-new.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
