--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -39,7 +39,7 @@
     "expo-file-system": "~15.4.5",
     "expo-font": "~11.4.0",
     "expo-image-picker": "~14.3.2",
-    "expo-linear-gradient": "^12.7.2",
+    "expo-linear-gradient": "~12.3.0",
     "expo-router": "2.0.15",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
