--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -30,6 +30,8 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.19",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.5.1",
     "dotenv": "^16.4.3",
     "expo": "^49.0.16",
