--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -71,6 +71,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "react-native-text-size": "^4.0.0-rc.1",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
     "react-redux": "^8.1.3",
