--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -1,6 +1,6 @@
 {
   "name": "literary-hub",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -52,6 +52,8 @@
     "open-dyslexic": "^1.0.3",
     "openai": "^4.27.0",
     "os": "^0.1.2",
+    "patch": "^0.0.1",
+    "patch-package": "^8.0.0",
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
