--- a/literary-hub/package.json
+++ b/literary-hub/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-0",
@@ -52,9 +53,9 @@
     "open-dyslexic": "^1.0.3",
     "openai": "^4.27.0",
     "os": "^0.1.2",
-    "patch": "^0.0.1",
     "patch-package": "^8.0.0",
     "path": "^0.12.7",
+    "postinstall-postinstall": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
